# gov-ai-client

./: .cruft.json  .env.example  .gitignore  .mcp-servers-example.yaml  .pre-commit-config.yaml  Makefile  README.md  aws_architecture  docker-compose.yaml  package-lock.json
.github/: .github.env
.github/workflows/: build.yml  release.yml
docs/: e2e-test-implementation-plan.md
example-app/: .client.env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
frontend/: Dockerfile  README.md  astro.config.mjs  eslint.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/: auth.ts  middleware.ts
frontend/src/components/: LogoAnimation.astro  SidePanel.astro  SidePanelServer.astro  ToolsAllServers.astro  ToolsSingleServer.astro  iai-header.mjs  lit-wrapper.astro  loading-message.mjs  markdown-converter.mjs  message-box.mjs  message-input.mjs  model-selector.ts  tool-info.mjs  tool-selector.ts  tools.astro
frontend/src/layouts/: Chat.astro  Layout.astro
frontend/src/logic/: ai-sdk.ts  ai3.ts  database.ts  get-servers.ts  get-tools.ts
frontend/src/pages/: [...scope].astro  chat-history.astro  clear-session.ts  delete-chat.ts  (+3 more)
frontend/tests/: .gitignore  README.md  package.json  playwright.config.ts  tsconfig.json
mcp-server-demo/: Dockerfile  mcp_server.js  package-lock.json  package.json
scripts/: postgres-init.sql
terraform/: data.tf  ecs.tf  iam.tf  load_balancer.tf  provider.tf  rds.tf  s3.tf  secrets.tf  variables.tf
tests/: package-lock.json  package.json  playwright.config.ts  tests.spec.ts
(+11 files in other folders)
