[project]
name = "client-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "i.AI",email = "i-dot-ai-enquiries@cabinetoffice.gov.uk"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastmcp (>=2.8.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
